crates/carta/tests/snapshots/golden_e2e__rst__plain__section-overline-short.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
  ------------------------------
  A Title Longer Than Its Rule
  ------------------------------

Body paragraph after.
