crates/carta/tests/snapshots/golden_e2e__rst__plain__sidebar-subtitle.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
The Title: The Subtitle

The body of the sidebar.
