crates/carta/tests/snapshots/golden_e2e__rst__plain__substitution-reference.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
Power comes from the Sol above.
