crates/carta/tests/snapshots/golden_e2e__rst__plain__substitutions-undefined.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
This paragraph references an |undefined| substitution that is never
declared.
