crates/carta/tests/snapshots/golden_e2e__rst__plain__table-directive-caption.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
  Name    Age
  ------- -----
  Alice   30
  Bob     25

  : A captioned table
