crates/carta/tests/snapshots/golden_e2e__rst__plain__tables-csv.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
  -----------------------------------------------------------------------
  Treat               Quantity     Description
  ------------------- ------------ --------------------------------------
  Albatross           2.99         On a stick!

  Crunchy Frog        1.49         If we took the bones out

  Gannet Ripple       1.99         On a stick!
  -----------------------------------------------------------------------

  : Frozen Delights!
