crates/carta/tests/snapshots/golden_e2e__rst__plain__tables-grid-spans.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
+------------------------+--------------+--------------+--------------+
| Header row, column 1   | Header 2     | Header 3     | Header 4     |
+========================+==============+==============+==============+
| body row 1, column 1   | column 2     | column 3     | column 4     |
+------------------------+--------------+--------------+--------------+
| body row 2             | Cells may span columns.                    |
+------------------------+--------------+-----------------------------+
| body row 3             | Cells may    | - Cells.                    |
|                        | span rows.   | - Contain.                  |
|                        |              | - Blocks.                   |
+------------------------+              |                             |
| body row 4             |              |                             |
+------------------------+--------------+-----------------------------+
