crates/carta/tests/snapshots/golden_e2e__rst__plain__tables-grid.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
  -------------------------
  Fruit        Color
  ------------ ------------
  Apple        Red

  Lemon        Yellow
  -------------------------
