crates/carta/tests/snapshots/golden_e2e__rst__plain__tables-list.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
  -----------------------------------------------------------------------
  Treat               Quantity     Description
  ------------------- ------------ --------------------------------------
  Albatross           2.99         On a stick!

  Crunchy Frog        1.49         If we took the bones out
  -----------------------------------------------------------------------

  : Frozen Delights!
