crates/carta/tests/snapshots/golden_e2e__rst__plain__target-escaped-colon.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
The reference name: with colon points at an escaped-colon target.
